--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
     "gulp-open": "^1.0.0",
-    "gulp-ruby-sass": "^2.0.6"
+    "gulp-ruby-sass": "^2.0.6",
+    "gulp-slim": "^0.3.0",
+    "gulp-uglify": "^1.5.1"
   }
 }
