--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
+    "gulp-inject": "^3.0.0",
     "gulp-open": "^1.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-slim": "^0.3.0",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "main-bower-files": "^2.11.0"
   }
 }
